Revision history for Perl extension Wx.

	- Added wxSpinCtrlDouble (2.9).
	- Added wxDataViewListCtrl (2.9).

0.95
	- Only preload wxWidgets' DLL under Windows.

0.94  Sun Nov  8 14:10:32 CET 2009
	- Remove the last use of the xspp command line script.
	- Compilation fix for Strawberry Perl 5.10 (probably needed for all
	  Perl 5.10 builds on Windows).
	- wxWidgets 2.9.0 compatibility.

0.93  Gio 24 Set 2009 21:34:10 CEST
	- Use ExtUtils::XSpp::Cmd instead of the xspp command
	  line script.

0.92  Thu Aug  6 21:04:59 CEST 2009
	- Compilation fix for ActivePerl.
	- First public release to use ExtUtils::XSpp.

0.91_01  Thu Jun 25 00:30:17 CEST 2009
	- xspp is no longer part of Wx (See ExtUtils::XSpp)

0.91  Sun May 17 18:55:45 CEST 2009
	- Threading fixes for 25 classes.
	- Fixed Windows build (patch by Ahmad Zawawi).

0.90  Sun May 10 09:24:25 CEST 2009
	- Miscellaneous build/compilation fixes.

0.89  Sat Dec  6 11:39:54 CET 2008
	- Fix crash when using AUI and threads.

0.88  Sun Nov  9 18:03:25 CET 2008
	- Skip author tests unless $ENV{AUTHOR_TESTS} is set.

0.87  Fri Nov  7 20:31:09 CET 2008
	- Fix segmentation fault when building under Mac in ANSI mode.

0.86  Wed Sep  3 22:57:17 CEST 2008
	- Allow binding a method to an event, not just a sub reference.
	- Add Wx::SetAlwaysUTF8() to always return character strings from
	  wxWidgets methods, even in ANSI mode (does nothing if wxWidgets
	  is compiled with Unicode enabled).
	- Warn if INC/LIB are passed to Makefile.PL, since this might
	  cause the build to fail.

0.85  Sun Aug 24 11:26:38 CEST 2008
	- Compilation fixes for wxMotif (patch by Marek Rouchal).
	- On Mac OS X warn the user if it is not running the program
	  using wxPerl.

0.84  Sun Jun 29 21:43:31 CEST 2008
	- Workaround for crash on exit on DEBUGGING Perls
	  (mostly affects Fedora users)

0.83  Mon May 19 22:37:36 CEST 2008
	- Avoid 'deep recursion' errors and eating all available
	  memory when loading wxPerl fails.