@@ -533,3 +533,4 @@ ext/docview/t/04_cmdproc.t
 interface/wx/dataview/dataviewlistctrl.h
 interface/wx/dataview/dataviewliststore.h
 interface/wx/generic/spinctrg.h
+interface/wx/infobar.h
